templates/http-route.yaml
apiVersion: networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bhuvana-httproute
  namespace: bhuvana-ns
spec:
  parentRefs: 
    - name: bhuvana-gateway
  rules:
    - matches: 
        - path:
            type: PathPrefix
            value: /api/bhuvana-app
      filters: 
        - type: URLRewrite
          URLRewrite: 
            path:
              type: ReplacePrefixMatch
              ReplacePrefixMatch: /bhuvana-app
      backendRefs:
        - name: bhuvana-service
          port: 5000
